--- a/generar-png.html
+++ b/generar-png.html
@@ -71,7 +71,7 @@
                 // Configurar el gráfico con Chart.js
                 const ctx = document.getElementById("chartCanvas").getContext("2d");
                 const chart = new Chart(ctx, {
-                    type: "bar",
+                    type: "line",
                     data: {
                         labels: labels,
                         datasets: Object.values(datasets)
