--- a/generar-excel.html
+++ b/generar-excel.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <script>
-        // Obtener el contenido de la URL
+        // Obtener los parámetros de la URL
         const urlParams = new URLSearchParams(window.location.search);
         const data = urlParams.get("data") || "Columna1,Columna2,Columna3\nDato1,Dato2,Dato3";
+        const filename = decodeURIComponent(urlParams.get("filename") || "archivo.xlsx"); // Nombre por defecto
 
         // Decodificar el contenido
         const decodedData = decodeURIComponent(data);
@@ -43,7 +44,7 @@
         // Descargar el archivo
         const link = document.createElement("a");
         link.href = URL.createObjectURL(blob);
-        link.download = "Descarga_PBA.xlsx"; // Cambia el nombre según sea necesario
+        link.download = filename; // Usar el nombre proporcionado por el parámetro filename
         document.body.appendChild(link);
         link.click();
         document.body.removeChild(link);
