--- a/generar-png.html
+++ b/generar-png.html
@@ -12,7 +12,7 @@
         }
 
         canvas {
-            background-color: #ffffff; /* Fondo blanco del gráfico */
+            background-color: white; /* Fondo blanco del gráfico */
         }
 
         h1 {
