--- a/generar-png.html
+++ b/generar-png.html
@@ -12,7 +12,7 @@
         }
 
         canvas {
-            background-color: white; /* Fondo blanco del gráfico */
+            background-color: #FFFFFF; /* Fondo blanco del gráfico */
         }
 
         h1 {
@@ -31,7 +31,7 @@
 </head>
 <body>
     <h1 id="chart-title">Generando gráfico...</h1>
-    <canvas id="chartCanvas" width="800" height="600" style="background-color: white;"></canvas>
+    <canvas id="chartCanvas" width="800" height="600" style="background-color: #FFFFFF;"></canvas>
     <script>
         // Obtener parámetros de la URL
         const urlParams = new URLSearchParams(window.location.search);
