--- a/generar-png.html
+++ b/generar-png.html
@@ -47,7 +47,8 @@
             "#4A6C74", // Complementario 1
             "#A64B29", // Complementario 2
             "#D1AB7A", // Complementario 3
-            "#2B3E4C", // Complementario 4
+            "#2B3E4C",
+            "#FFFFFF" // Complementario 4
         ];
 
         if (!data) {
