--- a/generar-png.html
+++ b/generar-png.html
@@ -11,10 +11,6 @@
             font-family: Arial, sans-serif;
         }
 
-        canvas {
-            background-color: #FFFFFF; /* Fondo blanco del gráfico */
-        }
-
         h1 {
             font-size: 24px;
             color: #000000; /* Texto negro */
@@ -39,94 +35,127 @@
         const title = decodeURIComponent(urlParams.get("T") || "Gráfico de Barras");
         const filename = decodeURIComponent(urlParams.get("filename") || "grafico.png");
 
+        // Paleta de colores base
+        const colors = [
+            "#6B797C", // Base 1
+            "#362B2B", // Base 2
+            "#B08D72", // Base 3
+            "#4A6C74", // Complementario 1
+            "#A64B29", // Complementario 2
+            "#D1AB7A", // Complementario 3
+            "#2B3E4C",
+            "#FFFFFF" // Complementario 4
+        ];
+
         if (!data) {
             alert("No se proporcionaron datos en la URL.");
         } else {
             try {
-                // Decodificar los datos y convertirlos a una matriz
                 const decodedData = decodeURIComponent(data);
                 const rows = decodedData.split("\n").map(row => row.split(","));
 
-                // Asume que la tabla tiene 3 columnas:
-                // - Columna 1: Eje X
-                // - Columna 2: Leyenda
-                // - Columna 3: Eje Y (valores)
-                const labels = [...new Set(rows.slice(1).map(row => row[0]))]; // Eje X
-                const datasets = [...new Set(rows.slice(1).map(row => row[1]))].map((legend, index) => {
-                    return {
-                        label: legend,
-                        data: labels.map(label => {
-                            const match = rows.find(row => row[0] === label && row[1] === legend);
-                            return match ? parseFloat(match[2]) : 0;
-                        }),
-                        backgroundColor: ["#009AAE", "#9D9D9D", "#4B6B97"][index % 3], // Colores fijos
-                        borderColor: "#FFFFFF",
-                        borderWidth: 1,
-                    };
+                let labels = []; // Eje X
+                const datasets = {}; // Leyendas y datos
+                let colorIndex = 0;
+
+                rows.slice(1).forEach(row => {
+                    const xValue = row[0]; 
+                    const legend = row[1]; 
+                    const yValue = parseFloat(row[2]); 
+
+                    if (!labels.includes(xValue)) {
+                        labels.push(xValue);
+                    }
+
+                    if (!datasets[legend]) {
+                        datasets[legend] = {
+                            label: legend,
+                            data: [],
+                            backgroundColor: colors[colorIndex % colors.length],
+                            borderColor: "#FFFFFF",
+                            borderWidth: 1
+                        };
+                        colorIndex++;
+                    }
+
+                    const xIndex = labels.indexOf(xValue);
+                    datasets[legend].data[xIndex] = yValue;
                 });
 
-                // Crear el gráfico
-                const canvas = document.getElementById("chartCanvas");
-                const ctx = canvas.getContext("2d");
+                // Ordenamos las etiquetas del eje X
+                labels = labels.sort((a, b) => a - b);
 
-                // Dibujar fondo blanco antes del gráfico
-                ctx.fillStyle = "#FFFFFF"; // Fondo blanco
-                ctx.fillRect(0, 0, canvas.width, canvas.height);
+                // Ajustamos los datos a las etiquetas ordenadas
+                Object.values(datasets).forEach(dataset => {
+                    dataset.data = labels.map(label => {
+                        const xIndex = rows.slice(1).findIndex(row => row[0] === label && row[1] === dataset.label);
+                        return xIndex !== -1 ? parseFloat(rows[xIndex + 1][2]) : 0;
+                    });
+                });
 
+                // Plugin para asegurar el fondo blanco en el canvas
+                const whiteBackgroundPlugin = {
+                    id: 'whiteBackgroundPlugin',
+                    beforeDraw: (chart) => {
+                        const ctx = chart.ctx;
+                        ctx.save();
+                        ctx.fillStyle = 'white';
+                        ctx.fillRect(0, 0, chart.width, chart.height);
+                        ctx.restore();
+                    }
+                };
+
+                const ctx = document.getElementById("chartCanvas").getContext("2d");
                 const chart = new Chart(ctx, {
                     type: "bar",
                     data: {
                         labels: labels,
-                        datasets: datasets,
+                        datasets: Object.values(datasets)
                     },
                     options: {
                         responsive: true,
                         plugins: {
                             legend: {
-                                position: "top",
+                                position: "top"
                             },
                             title: {
                                 display: true,
-                                text: title,
-                                color: "#004D57",
-                                font: {
-                                    size: 16,
-                                },
-                                padding: { top: 10, bottom: 30 },
-                                backgroundColor: "#E6E6E6",
-                            },
+                                text: title
+                            }
                         },
                         scales: {
                             x: {
                                 title: {
                                     display: true,
-                                    text: "Categorías",
-                                },
+                                    text: "Categorías"
+                                }
                             },
                             y: {
                                 title: {
                                     display: true,
-                                    text: "Valores",
-                                },
-                            },
-                        },
+                                    text: "Valores"
+                                }
+                            }
+                        }
                     },
+                    plugins: [whiteBackgroundPlugin]
                 });
+
+                document.getElementById("chart-title").innerText = title;
 
                 // Descargar el gráfico como PNG
                 setTimeout(() => {
                     const link = document.createElement("a");
-                    link.href = canvas.toDataURL("image/png");
-                    link.download = filename; // Usar el nombre del archivo proporcionado
+                    link.href = chart.toBase64Image();
+                    link.download = filename; 
                     document.body.appendChild(link);
                     link.click();
                     document.body.removeChild(link);
 
-                    // Cerrar la pestaña después de la descarga
                     setTimeout(() => {
                         window.close();
                     }, 1000);
-                }, 2000); // Espera a que el gráfico se renderice antes de exportar
+                }, 2000);
             } catch (e) {
                 console.error("Error procesando los datos:", e);
                 alert("Hubo un error al procesar los datos.");
