--- a/PlataformaPBA.html
+++ b/PlataformaPBA.html
@@ -2,10 +2,54 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Redireccionando a la Plataforma.</title>
-    <meta http-equiv="refresh" content="1; url=https://app.powerbi.com/view?r=eyJrIjoiN2Y4N2YzNDktYTVkZS00OGFmLWJkNTQtYWU3ODY1NmI4ZWZhIiwidCI6ImE1YmEzMDQ2LTNmMzQtNDI0Mi1iZjc4LTk5NDY1ODk2MGI4MCJ9&pageName=9fba775ce961eff8a47b" />
+    <meta http-equiv="refresh" content="2; url=https://app.powerbi.com/view?r=eyJrIjoiN2Y4N2YzNDktYTVkZS00OGFmLWJkNTQtYWU3ODY1NmI4ZWZhIiwidCI6ImE1YmEzMDQ2LTNmMzQtNDI0Mi1iZjc4LTk5NDY1ODk2MGI4MCJ9&pageName=9fba775ce961eff8a47b" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Plataforma de Datos para la Gestión Educativa</title>
+    <style>
+      body {
+        font-family: "Segoe UI", Roboto, sans-serif;
+        background-color: #f4f6f8;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        color: #333;
+        margin: 0;
+      }
+      .container {
+        text-align: center;
+        max-width: 500px;
+        background: white;
+        padding: 40px;
+        border-radius: 12px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      }
+      h1 {
+        font-size: 1.5rem;
+        margin-bottom: 10px;
+      }
+      p {
+        font-size: 1rem;
+        margin-bottom: 20px;
+      }
+      .btn {
+        background-color: #005fa8;
+        color: white;
+        padding: 10px 20px;
+        text-decoration: none;
+        border-radius: 6px;
+        display: inline-block;
+      }
+      .btn:hover {
+        background-color: #004c86;
+      }
+    </style>
   </head>
   <body>
-    <p>Redireccionando... Si no ocurre, <a href="https://app.powerbi.com/view?r=eyJrIjoiN2Y4N2YzNDktYTVkZS00OGFmLWJkNTQtYWU3ODY1NmI4ZWZhIiwidCI6ImE1YmEzMDQ2LTNmMzQtNDI0Mi1iZjc4LTk5NDY1ODk2MGI4MCJ9&pageName=9fba775ce961eff8a47b">hacé clic aquí</a>.</p>
+    <div class="container">
+      <h1>Redireccionando a la Plataforma de Datos</h1>
+      <p>Serás dirigido automáticamente en unos segundos.</p>
+      <a class="btn" href="https://app.powerbi.com/view?r=eyJrIjoiN2Y4N2YzNDktYTVkZS00OGFmLWJkNTQtYWU3ODY1NmI4ZWZhIiwidCI6ImE1YmEzMDQ2LTNmMzQtNDI0Mi1iZjc4LTk5NDY1ODk2MGI4MCJ9&pageName=9fba775ce961eff8a47b">Ir ahora</a>
+    </div>
   </body>
 </html>
