--- a/PlataformaPBA.html
+++ b/PlataformaPBA.html
@@ -30,7 +30,7 @@
       }
       h1 {
         font-size: 1.5rem;
-        color: #0088bb;
+        color: #269cb4;
         margin-bottom: 10px;
       }
       p {
