--- a/PlataformaPBA.html
+++ b/PlataformaPBA.html
@@ -36,17 +36,19 @@
       p {
         font-size: 1rem;
         margin-bottom: 20px;
+        color: #555;
       }
       .btn {
-        background-color: #0088bb;
+        background-color: #269cb4;
         color: white;
         padding: 10px 20px;
         text-decoration: none;
         border-radius: 6px;
         font-weight: bold;
+        transition: background-color 0.3s ease;
       }
       .btn:hover {
-        background-color: #006f9c;
+        background-color: #1d7e96;
       }
     </style>
   </head>
