--- a/PlataformaPBA.html
+++ b/PlataformaPBA.html
@@ -30,7 +30,7 @@
       }
       h1 {
         font-size: 1.5rem;
-        color: #269cb4;
+        color: #04ADC2;
         margin-bottom: 10px;
       }
       p {
@@ -39,7 +39,7 @@
         color: #555;
       }
       .btn {
-        background-color: #269cb4;
+        background-color: #04ADC2;
         color: white;
         padding: 10px 20px;
         text-decoration: none;
