--- a/PlataformaPBA.html
+++ b/PlataformaPBA.html
@@ -59,7 +59,7 @@
         src="https://abc.gob.ar/sites/default/files/2021-03/logo-pba-mobile.png"
         alt="Gobierno de la Provincia de Buenos Aires"
       />
-      <h1>Redireccionando a la Plataforma de Datos</h1>
+      <h1>Redireccionando a la Plataforma de Datos para la Gestión Educativa</h1>
       <p>Serás dirigido automáticamente en unos segundos.</p>
       <a
         class="btn"
