--- a/PBADownload.html
+++ b/PBADownload.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Descarga en Proceso</title>
     <style>
       body {
@@ -45,16 +45,36 @@
         margin-bottom: 20px;
       }
       .progress-bar {
-        width: 0;
+        width: 100%;
         height: 16px;
         background-color: #04ADC2;
-        transition: width 0.2s ease;
+        position: relative;
+        overflow: hidden;
+      }
+      @keyframes pulse {
+        0% { transform: translateX(-100%); }
+        50% { transform: translateX(0); }
+        100% { transform: translateX(100%); }
+      }
+      .progress-bar::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        width: 30%;
+        background: rgba(255,255,255,0.5);
+        animation: pulse 2s infinite;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <img class="logo" src="https://abc.gob.ar/sites/default/files/2021-03/logo-pba-mobile.png" alt="Gobierno de la Provincia de Buenos Aires">
+      <img
+        class="logo"
+        src="https://abc.gob.ar/sites/default/files/2021-03/logo-pba-mobile.png"
+        alt="Gobierno de la Provincia de Buenos Aires"
+      />
       <h1>Descarga en proceso</h1>
       <p>Por favor, espere mientras comenzamos la descarga.</p>
       <div class="progress-container">
@@ -63,61 +83,16 @@
     </div>
     <script>
       (function() {
-        // Obtener parámetro 'url' de la query string
         const params = new URLSearchParams(window.location.search);
         const downloadUrl = params.get('url');
         if (!downloadUrl) {
           document.querySelector('p').textContent = 'URL de descarga no proporcionada.';
           return;
         }
-
-        // Función para actualizar la barra de progreso
-        function updateProgress(percent) {
-          const bar = document.getElementById('progress-bar');
-          bar.style.width = percent + '%';
-        }
-
-        // Iniciar la descarga con XHR para monitorear progreso
-        const xhr = new XMLHttpRequest();
-        xhr.open('GET', downloadUrl);
-        xhr.responseType = 'blob';
-
-        xhr.onprogress = function(event) {
-          if (event.lengthComputable) {
-            const percentComplete = Math.round((event.loaded / event.total) * 100);
-            updateProgress(percentComplete);
-          }
-        };
-
-        xhr.onload = function() {
-          if (xhr.status === 200) {
-            // Crear blob y forzar descarga
-            const blob = xhr.response;
-            const link = document.createElement('a');
-            link.href = window.URL.createObjectURL(blob);
-            // Intentar obtener nombre de archivo de headers
-            const disposition = xhr.getResponseHeader('Content-Disposition');
-            let fileName = '';
-            if (disposition && disposition.indexOf('filename=') !== -1) {
-              fileName = disposition.split('filename=')[1].replace(/['"]/g, '');
-            }
-            link.download = fileName || 'download';
-            document.body.appendChild(link);
-            link.click();
-            // Revocar URL y cerrar ventana tras un breve retraso
-            window.URL.revokeObjectURL(link.href);
-            setTimeout(() => window.close(), 1000);
-          } else {
-            document.querySelector('p').textContent = 'Error en la descarga. Código: ' + xhr.status;
-          }
-        };
-
-        xhr.onerror = function() {
-          document.querySelector('p').textContent = 'Error de red durante la descarga.';
-        };
-
-        // Enviar solicitud
-        xhr.send();
+        // Inicia barra indeterminada y redirige a la URL
+        window.location.href = downloadUrl;
+        // Cierra la pestaña tras iniciar la descarga
+        setTimeout(() => window.close(), 3000);
       })();
     </script>
   </body>
